<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Base de Datos Animales</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID:</string>
    <string name="nombre_comun">Nombre Común:</string>
    <string name="nombre_cient">Nombre Científico:</string>
    <string name="habitat">Habitat:</string>
    <string name="caracteristicas">Características:</string>
    <string name="guardar">GUARDAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="editar">EDITAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="ver">VER</string>
    <string name="title_activity_animales">animales</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registros">registros</string>
    <string name="title_activity_animal">animal</string>
    <string name="title_activity_activity_animal">Lista</string>
    <string name="title_activity_animales_card">animales_card</string>

</resources>
